Fix spacing between header and details

--- a/src/WebUI/Common/KubeSummary.scss
+++ b/src/WebUI/Common/KubeSummary.scss
@@ -58,4 +58,8 @@
             }
         }
     }
+
+    .k8s-details-header{
+        padding-bottom: 10px;
+    }
 }
